fix(a11y): fix style to be more readable

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,5 @@
-#skills {
-  border-top: 1px solid var(--border);
-  display: flex;
-  align-items: center;
-  padding-inline: 100px;
-}
-
 #next-steps {
   display: flex;
-  border-top: 1px solid var(--border);
   text-align: left;
   flex-direction: row;
   & > div,
@@ -35,7 +27,19 @@
 
   @media (max-width: 1024px) {
     border-right: none;
-    border-bottom: 1px solid var(--border);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+#social {
+  @media (max-width: 1024px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -72,9 +76,6 @@
   }
 
   @media (max-width: 1024px) {
-    margin-top: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
 
     li {
       flex: 1 1 calc(50% - 8px);
@@ -140,6 +141,7 @@ section {
   & > header,
   & > h2 {
     z-index: inherit;
+    max-width: 90%;
   }
 }
 
