--- a/src/components/ScrollToTopButton.scss
+++ b/src/components/ScrollToTopButton.scss
@@ -25,6 +25,7 @@
       justify-content: center;
       background-color: var(--bg);
       border-radius: 50%;
+      border-color: transparent;
       z-index: 50;
     }
 
